# zrpepisodes

./: .gitignore  CMakeLists.txt  README.md  main.cpp  searchepisodes.cpp  searchepisodes.h  searchepisodes.ui
model/: character.cpp  character.h  episode.cpp  episode.h
service/: apiclient.cpp  apiclient.h  apiconfig.h
tests/: CMakeLists.txt
tests/models/: test_models.cpp
tests/services/: test_apiclient.cpp
